fix nav bar spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,12 @@
   animation-direction: var(--animation-direction, normal);
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+
